--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,12 +11,29 @@
 <body>
 <nav class="uk-navbar uk-navbar-attached uk-margin-bottom">
         <div class="uk-container uk-container-center">
-            <a href="/" class="uk-navbar-brand">Awesome</a>
+            <a href="/" class="uk-navbar-brand">Freesia</a>
             <ul class="uk-navbar-nav">
-                <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> 日志</a></li>
-                <li><a target="_blank" href="/"><i class="uk-icon-book"></i> 教程</a></li>
-                <li><a target="_blank" href="/"><i class="uk-icon-code"></i> 源码</a></li>
+                <li data-url="blogs"><a href="" class="uk-text-large"><i class="uk-icon-home"></i>主页</a></li>
+                <li><a target="_blank" href=""><i class="uk-icon-book"></i>技术日志</a></li>
+                <li><a target="_blank" href=""><i class="uk-icon-edit"></i>心情</a></li>
             </ul>
+            <div class="uk-navbar-flip">
+                <ul class="uk-navbar-nav">
+                {% if __user__ %}
+                    <li class="uk-parent" data-uk-dropdown>
+                        <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
+                        <div class="uk-dropdown uk-dropdown-navbar">
+                            <ul class="uk-nav uk-nav-navbar">
+                                <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                {% else %}
+                    <li><a href="/signin"><i class="uk-icon-sign-in"></i> 登陆</a></li>
+                    <li><a href="/register"><i class="uk-icon-edit"></i> 注册</a></li>
+                {% endif %}
+                </ul>
+            </div>
         </div>
 </nav>
 </body>
