--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,13 +7,14 @@
     <!--<link rel="stylesheet" href="/static/css/uikit.css">-->
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/uikit.js"></script>
+    {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
 <nav class="uk-navbar uk-navbar-attached uk-margin-bottom">
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">Freesia</a>
             <ul class="uk-navbar-nav">
-                <li data-url="blogs"><a href="" class="uk-text-large"><i class="uk-icon-home"></i>主页</a></li>
+                <li data-url="blogs"><a href=""><i class="uk-icon-home"></i>主页</a></li>
                 <li><a target="_blank" href=""><i class="uk-icon-book"></i>技术日志</a></li>
                 <li><a target="_blank" href=""><i class="uk-icon-edit"></i>心情</a></li>
             </ul>
@@ -30,11 +31,38 @@
                     </li>
                 {% else %}
                     <li><a href="/signin"><i class="uk-icon-sign-in"></i> 登陆</a></li>
-                    <li><a href="/register"><i class="uk-icon-edit"></i> 注册</a></li>
+                    <li><a href="/register"><i class="uk-icon-user-plus"></i> 注册</a></li>
                 {% endif %}
                 </ul>
             </div>
         </div>
 </nav>
+
+<div class="uk-container uk-container-center">
+        <div class="uk-grid">
+            <!-- content -->
+            {% block content %}
+            {% endblock %}
+            <!-- // content -->
+        </div>
+    </div>
+
+    <div class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
+        <div class="uk-container uk-container-center uk-text-center">
+            <div class="uk-panel uk-margin-top uk-margin-bottom">
+                <p>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-weibo"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-github"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-linkedin-square"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-twitter"></a>
+                </p>
+                <p>Powered by <a href="">Awesome Python Webapp</a>. Copyright &copy; 2014.
+                    [<a href=""target="_blank">Manage</a>]</p>
+                <p><a href="" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
+                <a target="_blank" href=""><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
