--- a/web/templates/write_blog.html
+++ b/web/templates/write_blog.html
@@ -9,7 +9,7 @@ var
     ID = '{{ id }}',
     action = '{{ action }}';
 function initVM(blog) {
-    var vm = new Vue({
+     var vm = new Vue({
         el: '#vm',
         data: blog,
         methods: {
@@ -42,7 +42,7 @@ $(function () {
     else {
         $('#loading').hide();
         initVM({
-            name: '',
+            title: '',
             summary: '',
             content: ''
         });
@@ -76,7 +76,7 @@ $(function () {
             <div class="uk-form-row">
                 <label class="uk-form-label">标题:</label>
                 <div class="uk-form-controls">
-                    <input v-model="name" name="name" type="text" placeholder="标题" class="uk-width-1-1">
+                    <input v-model="title" name="title" type="text" placeholder="标题" class="uk-width-1-1">
                 </div>
             </div>
             <div class="uk-form-row">
