--- a/web/templates/write_blog.html
+++ b/web/templates/write_blog.html
@@ -11,21 +11,21 @@ var
 function initVM(blog) {
      var vm = new Vue({
         el: '#vm',
-        data: blog,
-        methods: {
-            submit: function (event) {
-                event.preventDefault();
-                var $form = $('#vm').find('form');
-                $form.postJSON(action, this.$data, function (err, r) {
-                    if (err) {
-                        $form.showFormError(err);
-                    }
-                    else {
-                        return location.assign('/api/blogs/' + r.id);
-                    }
-                });
-            }
-        }
+        data: blog
+//        methods: {
+//            submit: function (event) {
+//                event.preventDefault();
+//                var $form = $('#vm').find('form');
+//                $form.postJSON(action, this.$data, function (err, r) {
+//                    if (err) {
+//                        $form.showFormError(err);
+//                    }
+//                    else {
+//                        return location.assign('/api/blogs/' + r.id);
+//                    }
+//                });
+//            }
+//        }
     });
     $('#vm').show();
 }
@@ -71,7 +71,8 @@ $(function () {
     </div>
 
     <div id="vm" class="uk-width-2-3">
-        <form v-on="submit: submit" class="uk-form uk-form-stacked">
+        <form  class="uk-form uk-form-stacked" action="/api/saveBlog" method="post">
+            <!--v-on="submit: submit"-->
             <div class="uk-alert uk-alert-danger uk-hidden"></div>
             <div class="uk-form-row">
                 <label class="uk-form-label">标题:</label>
