--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,6 +8,7 @@
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/vue.js"></script>
     <script src="/static/js/uikit.js"></script>
+    <script src="/static/js/awesome.js"></script>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
