--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -32,7 +32,7 @@
                         </div>
                     </li>
                 {% else %}
-                    <li><a href="/signin"><i class="uk-icon-sign-in"></i>登陆</a></li>
+                    <li><a href="/login"><i class="uk-icon-sign-in"></i>登陆</a></li>
                     <li><a href="/register"><i class="uk-icon-user-plus"></i>注册</a></li>
                     <li><a href="/blog/writeBlog"><i class="uk-icon-edit"></i>管理</a></li>
                 {% endif %}
