--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -28,7 +28,7 @@ $(function() {
                         email: email,
                         passwd: this.passwd==='' ? '' : CryptoJS.SHA1(email + ':' + this.passwd).toString()
                     };
-                $form.postJSON('/api/authenticate', data, function(err, result) {
+                $form.postJSON('/user/login', data, function(err, result) {
                     if (! err) {
                         location.assign('/');
                     }
