--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -9,6 +9,10 @@ function validateEmail(email) {
     var re = /^[a-z0-9\.\-\_]+\@[a-z0-9\-\_]+(\.[a-z0-9\-\_]+){1,4}$/;
     return re.test(email.toLowerCase());
 }
+function validatePassword(password1) {
+    var re = /^[a-zA-Z0-9]{6,18}$/;
+    return re.test(password1);
+}
 $(function () {
     var vm = new Vue({
         el: '#vm',
@@ -28,14 +32,14 @@ $(function () {
                 if (! validateEmail(this.email.trim().toLowerCase())) {
                     return $form.showFormError('请输入正确的Email地址');
                 }
-                if (this.password1.length < 6) {
-                    return $form.showFormError('口令长度至少为6个字符');
+                if (! validatePassword(this.password1.trim())) {
+                    return $form.showFormError('口令长度为6-18个字符(数字或字母)');
                 }
                 if (this.password1 !== this.password2) {
                     return $form.showFormError('两次输入的口令不一致');
                 }
                 var email = this.email.trim().toLowerCase();
-                $form.postJSON('/api/users', {
+                $form.postJSON('/user/register', {
                     name: this.name.trim(),
                     email: email,
                     passwd: CryptoJS.SHA1(email + ':' + this.password1).toString()
@@ -43,7 +47,7 @@ $(function () {
                     if (err) {
                         return $form.showFormError(err);
                     }
-                    return location.assign('/');
+                    return location.assign('/login');
                 });
             }
         }
@@ -58,7 +62,7 @@ $(function () {
 
     <div class="uk-width-2-3">
         <h1>欢迎注册！</h1>
-        <form id="vm" v-on="submit: submit" class="uk-form uk-form-stacked">
+        <form id="vm" @submit="submit" class="uk-form uk-form-stacked">
             <div class="uk-alert uk-alert-danger uk-hidden"></div>
             <div class="uk-form-row">
                 <label class="uk-form-label">名字:</label>
