test register，login success

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -9,6 +9,7 @@
     <script src="/static/js/vue.js"></script>
     <script src="/static/js/uikit.js"></script>
     <script src="/static/js/awesome.js"></script>
+    <script src="/static/js/sha1.min.js"></script>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
