manage_blog.html and function

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -35,7 +35,7 @@
                 {% else %}
                     <li><a href="/login"><i class="uk-icon-sign-in"></i>登陆</a></li>
                     <li><a href="/register"><i class="uk-icon-user-plus"></i>注册</a></li>
-                    <li><a href="/blog/writeBlog"><i class="uk-icon-edit"></i>管理</a></li>
+                    <li><a href="/manage/blog/writeBlog"><i class="uk-icon-edit"></i>管理</a></li>
                 {% endif %}
                 </ul>
             </div>
