--- a/web/templates/write_blog.html
+++ b/web/templates/write_blog.html
@@ -57,7 +57,7 @@ $(function () {
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
                 <li><a href="">评论</a></li>
-                <li><a href="">日志</a></li>
+                <li><a href="/manage/blogs">日志</a></li>
                 <li><a href="">用户</a></li>
             </ul>
         </div>
