--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="/static/css/uikit.gradient.css">
     <!--<link rel="stylesheet" href="/static/css/uikit.css">-->
     <script src="/static/js/jquery-3.2.1.js"></script>
-    <script src="/static/js/vue.js"></script>
-    <script src="/static/js/uikit.js"></script>
-    <script src="/static/js/awesome.js"></script>
     <script src="/static/js/sha1.min.js"></script>
+    <script src="/static/js/uikit.js"></script>
+    <script src="/static/js/vue.min.js"></script>
+    <script src="/static/js/awesome.js"></script>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
