--- a/web/templates/manage_blog.html
+++ b/web/templates/manage_blog.html
@@ -32,7 +32,7 @@ function initVM(data) {
 }
 $(function() {
     getJSON('/api/blogs', {
-        page: {{ page_index }}
+        page: '{{ page_index }}'
     }, function (err, results) {
         if (err) {
             return fatal(err);
@@ -65,7 +65,7 @@ $(function() {
     </div>
 
     <div id="vm" class="uk-width-1-1">
-        <a href="/manage/blogs/create" class="uk-button uk-button-primary"><i class="uk-icon-plus"></i> 新日志</a>
+        <a href="/manage/blog/writeBlog" class="uk-button uk-button-primary"><i class="uk-icon-plus"></i> 新日志</a>
 
         <table class="uk-table uk-table-hover">
             <thead>
@@ -79,17 +79,17 @@ $(function() {
             <tbody>
                 <tr v-repeat="blog: blogs" >
                     <td>
-                        <a target="_blank" v-attr="href: '/blog/'+blog.id" v-text="blog.name"></a>
+                        <a target="_blank" v-attr="href:'/api/blogs/'+blog.id" v-text="blog.title"></a>
                     </td>
                     <td>
-                        <a target="_blank" v-attr="href: '/user/'+blog.user_id" v-text="blog.user_name"></a>
+                        <a target="_blank" v-attr="href:'/user/'+blog.user_id" v-text="blog.user_name"></a>
                     </td>
                     <td>
                         <span v-text="blog.created_at.toDateTime()"></span>
                     </td>
                     <td>
-                        <a href="#0" v-on="click: edit_blog(blog)"><i class="uk-icon-edit"></i>
-                        <a href="#0" v-on="click: delete_blog(blog)"><i class="uk-icon-trash-o"></i>
+                        <a href="#0" v-on="click: edit_blog(blog)"><i class="uk-icon-edit"></i></a>
+                        <a href="#0" v-on="click: delete_blog(blog)"><i class="uk-icon-trash-o"></i></a>
                     </td>
                 </tr>
             </tbody>
