--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <title>登录 - Freesia Website</title>
-    <link rel="stylesheet" href="/static/css/uikit.min.css">
-    <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
-    <script src="/static/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="/static/css/uikit.gradient.css">
+    <!--<link rel="stylesheet" href="/static/css/uikit.css">-->
+    <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/sha1.min.js"></script>
-    <script src="/static/js/uikit.min.js"></script>
+    <script src="/static/js/uikit.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
-    <script>
+<script>
 $(function() {
     var vmAuth = new Vue({
         el: '#vm',
@@ -37,7 +37,7 @@ $(function() {
         }
     });
 });
-    </script>
+</script>
 </head>
 <body class="uk-height-1-1">
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
