--- a/web/templates/edit_blog.html
+++ b/web/templates/edit_blog.html
@@ -6,25 +6,32 @@
 <link rel="stylesheet" href="/static/css/editormd.css"/>
 <script src="/static/js/editormd.js"></script>
 <script>
-    $(function () {
+//    $(function () {
+//
+//        var testEditor = editormd("test-editormd", {
+//        width   : "1200px",
+//        height  : 640,
+//        syncScrolling : "single",
+//        path: "/static/editormd/lib/"
+//    });
+//        $('#loading').hide();
+//});
 
-        var testEditor = editormd("test-editormd", {
-        width   : "1200px",
-        height  : 640,
-        syncScrolling : "single",
-        path: "/static/editormd/lib/"
-    });
-
-
-        $('#loading').hide();
-
-        initVM({
-            title: '',
-            summary: '',
-            content: ''
-        },testEditor);
-});
-
+$(function () {
+    $("#ajaxBtn").click(function (event) {
+        event.preventDefault();
+        var params = $("#myform").serialize();
+        $.ajax({
+            type: "POST",
+            url: "/api/updateBlog",
+            data: params,
+            success: function (msg) {
+                alert("success: " + msg);
+            }
+        });
+    }
+)
+})
 </script>
 
 
@@ -45,12 +52,12 @@
     <div id="error" class="uk-width-1-1">
     </div>
 
-    <!--<div id="loading" class="uk-width-1-1 uk-text-center">-->
-        <!--<span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin"></i> 正在加载...</span>-->
-    <!--</div>-->
+    <div id="loading" class="uk-width-1-1 uk-text-center">
+        <span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin"></i> 正在加载...</span>
+    </div>
 
     <div id="vm" class="uk-width-2-3">
-        <form class="uk-form uk-form-stacked" enctype="application/x-www-form-urlencoded">
+        <form id="myform" class="uk-form uk-form-stacked" enctype="application/x-www-form-urlencoded">
             <!--action="/api/saveBlog" method="post"-->
             <div class="uk-alert uk-alert-danger uk-hidden"></div>
             <div class="uk-form-row">
@@ -65,15 +72,15 @@
                     <textarea rows="4" name="summary" placeholder="摘要" class="uk-width-1-1" style="resize:none;">{{blog.summary}}</textarea>
                 </div>
             </div>
+            <!--<div class="uk-form-row">-->
+                <!--<label class="uk-form-label">内容:</label>-->
+                <!--<div class="editormd" id="test-editormd" >-->
+                    <!--<textarea class="editormd-markdown-textarea" name="test-editormd-markdown-doc">{{blog.content}}</textarea>-->
+                    <!--<textarea class="editormd-html-textarea" name="test-editormd-html-code"></textarea>-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="uk-form-row">
-                <label class="uk-form-label">内容:</label>
-                <div class="editormd" id="test-editormd" >
-                    <textarea class="editormd-markdown-textarea" name="test-editormd-markdown-doc">{{blog.content}}</textarea>
-                    <textarea class="editormd-html-textarea" name="test-editormd-html-code"></textarea>
-                </div>
-            </div>
-            <div class="uk-form-row">
-                <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-save"></i> 保存</button>
+                <button  id="ajaxBtn" class="uk-button uk-button-primary"><i class="uk-icon-save"></i>保存</button>
                 <a href="/manage/blogs" class="uk-button"><i class="uk-icon-times"></i>取消</a>
             </div>
         </form>
