--- a/web/templates/edit_blog.html
+++ b/web/templates/edit_blog.html
@@ -6,27 +6,30 @@
 <link rel="stylesheet" href="/static/css/editormd.css"/>
 <script src="/static/js/editormd.js"></script>
 <script>
-//    $(function () {
-//
-//        var testEditor = editormd("test-editormd", {
-//        width   : "1200px",
-//        height  : 640,
-//        syncScrolling : "single",
-//        path: "/static/editormd/lib/"
-//    });
-//        $('#loading').hide();
-//});
-
 $(function () {
+    var testEditor = editormd("test-editormd", {
+        width   : "1200px",
+        height  : 640,
+        syncScrolling : "single",
+        path: "/static/editormd/lib/"
+    });
+    $('#loading').hide();
+
     $("#ajaxBtn").click(function (event) {
         event.preventDefault();
-        var params = $("#myform").serialize();
+//        var params = $("#myform").serialize();
+        var data = {
+            title:$("#title").val(),
+            summary:$("#summary").val(),
+            content:testEditor.getMarkdown()
+        };
         $.ajax({
             type: "POST",
             url: "/api/updateBlog",
-            data: params,
+            data: data,
+            dataType:'text',
             success: function (msg) {
-                alert("success: " + msg);
+                alert("info: " + msg);
             }
         });
     }
@@ -63,22 +66,22 @@ $(function () {
             <div class="uk-form-row">
                 <label class="uk-form-label">标题:</label>
                 <div class="uk-form-controls">
-                    <input value="{{blog.title}}" name="title" type="text" placeholder="标题" class="uk-width-1-1">
+                    <input value="{{blog.title}}" id="title" name="title" type="text" placeholder="标题" class="uk-width-1-1">
                 </div>
             </div>
             <div class="uk-form-row">
                 <label class="uk-form-label">摘要:</label>
                 <div class="uk-form-controls">
-                    <textarea rows="4" name="summary" placeholder="摘要" class="uk-width-1-1" style="resize:none;">{{blog.summary}}</textarea>
+                    <textarea rows="4" id="summary" placeholder="摘要" class="uk-width-1-1" style="resize:none;">{{blog.summary}}</textarea>
                 </div>
             </div>
-            <!--<div class="uk-form-row">-->
-                <!--<label class="uk-form-label">内容:</label>-->
-                <!--<div class="editormd" id="test-editormd" >-->
-                    <!--<textarea class="editormd-markdown-textarea" name="test-editormd-markdown-doc">{{blog.content}}</textarea>-->
-                    <!--<textarea class="editormd-html-textarea" name="test-editormd-html-code"></textarea>-->
-                <!--</div>-->
-            <!--</div>-->
+            <div class="uk-form-row">
+                <label class="uk-form-label">内容:</label>
+                <div class="editormd" id="test-editormd" >
+                    <textarea class="editormd-markdown-textarea" name="test-editormd-markdown-doc">{{blog.content}}</textarea>
+                    <textarea class="editormd-html-textarea" name="test-editormd-html-code"></textarea>
+                </div>
+            </div>
             <div class="uk-form-row">
                 <button  id="ajaxBtn" class="uk-button uk-button-primary"><i class="uk-icon-save"></i>保存</button>
                 <a href="/manage/blogs" class="uk-button"><i class="uk-icon-times"></i>取消</a>
