use css template optimize main page visual effect

--- a/web/templates/blog_list.html
+++ b/web/templates/blog_list.html
@@ -75,3 +75,24 @@ $(function() {
         </div>
     </div>
 {% endblock %}
+{% block footdiv %}
+
+  <footer>
+    <div class="footer">
+      <div class="f_l">
+                <p>All Rights Reserved 版权所有：<a href="#">Freesia</a> 备案号：</p>
+          </div>
+            <div class="f_r textr">
+
+                <p>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-weibo"></a>
+                    <a target="_blank" href="https://github.com/GarvenYu/" class="uk-icon-button uk-icon-github"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-linkedin-square"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-twitter"></a>
+                </p>
+            </div>
+
+</div>
+  </footer>
+
+{% endblock %}
