--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} ? {% endblock %} -Freesia</title>
+    <link rel="stylesheet" href="/static/css/base.css">
+<link rel="stylesheet" href="/static/css/index.css">
+<link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/uikit.gradient.css">
     <!--<link rel="stylesheet" href="/static/css/uikit.css">-->
     <script src="/static/js/jquery-3.2.1.js"></script>
@@ -13,6 +16,8 @@
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
+<div id="wrapper">
+
 <nav class="uk-navbar uk-navbar-attached uk-margin-bottom">
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">Hi,I'm Freesia</a>
@@ -50,23 +55,7 @@
             <!-- // content -->
         </div>
     </div>
-
-    <div class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
-        <div class="uk-container uk-container-center uk-text-center">
-            <div class="uk-panel uk-margin-top uk-margin-bottom">
-                <p>
-                    <a target="_blank" href="" class="uk-icon-button uk-icon-weibo"></a>
-                    <a target="_blank" href="https://github.com/GarvenYu/" class="uk-icon-button uk-icon-github"></a>
-                    <a target="_blank" href="" class="uk-icon-button uk-icon-linkedin-square"></a>
-                    <a target="_blank" href="" class="uk-icon-button uk-icon-twitter"></a>
-                </p>
-                <p>Powered by <a href="">Awesome Python Webapp</a>. Copyright &copy; 2014.
-                    [<a href=""target="_blank">Manage</a>]</p>
-                <p><a href="" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
-                <a target="_blank" href=""><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
-            </div>
-
-        </div>
-    </div>
+{% block footdiv %}{% endblock %}
+</div>
 </body>
 </html>
