--- a/web/templates/write_blog.html
+++ b/web/templates/write_blog.html
@@ -75,9 +75,9 @@ $(function () {
     <div class="uk-width-1-1 uk-margin-bottom">
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
-                <li><a href="">评论</a></li>
-                <li><a href="/manage/blogs">日志</a></li>
-                <li><a href="">用户</a></li>
+                <li><a href="">管理评论</a></li>
+                <li><a href="/manage/blogs">管理日志</a></li>
+                <li><a href="">管理用户</a></li>
             </ul>
         </div>
     </div>
@@ -119,4 +119,23 @@ $(function () {
         </form>
     </div>
 
+{% endblock %}
+{% block footdiv %}
+<div class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
+        <div class="uk-container uk-container-center uk-text-center">
+            <div class="uk-panel uk-margin-top uk-margin-bottom">
+                <p>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-weibo"></a>
+                    <a target="_blank" href="https://github.com/GarvenYu/" class="uk-icon-button uk-icon-github"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-linkedin-square"></a>
+                    <a target="_blank" href="" class="uk-icon-button uk-icon-twitter"></a>
+                </p>
+                <p>Powered by <a href="">Awesome Python Webapp</a>. Copyright &copy; 2014.
+                    [<a href=""target="_blank">Manage</a>]</p>
+                <p><a href="" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
+                <a target="_blank" href=""><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
+            </div>
+
+        </div>
+    </div>
 {% endblock %}
