--- a/web/templates/blog_list.html
+++ b/web/templates/blog_list.html
@@ -80,7 +80,7 @@ $(function() {
   <footer>
     <div class="footer">
       <div class="f_l">
-                <p>All Rights Reserved 版权所有：<a href="#">Freesia</a> 备案号：</p>
+                <p>All Rights Reserved 版权所有：<a href="">Freesia</a> 备案号：</p>
           </div>
             <div class="f_r textr">
 
