--- a/web/templates/blog_list.html
+++ b/web/templates/blog_list.html
@@ -82,7 +82,7 @@ $(function() {
       <div class="f_l">
                 <p>All Rights Reserved 版权所有：<a href="">Freesia</a> 备案号：</p>
           </div>
-            <div class="f_r textr">
+            <div class="f_l">
 
                 <p>
                     <a target="_blank" href="" class="uk-icon-button uk-icon-weibo"></a>
