--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,7 +22,7 @@
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">Hi,I'm Freesia</a>
             <ul class="uk-navbar-nav">
-                <li data-url="blogs"><a href="/blog/blogList"><i class="uk-icon-home"></i>Freesia主页</a></li>
+                <li data-url="blogs"><a href="/main"><i class="uk-icon-home"></i>Freesia主页</a></li>
                 <li><a target="_blank" href=""><i class="uk-icon-book"></i>所有文章</a></li>
                 <li><a target="_blank" href=""><i class="uk-icon-tag"></i>心情</a></li>
             </ul>
