--- a/web/templates/manage_blog.html
+++ b/web/templates/manage_blog.html
@@ -51,7 +51,7 @@ $(function() {
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
                 <li><a href="/manage/comments">管理评论</a></li>
-                <li class="uk-active"><span>管理日志</span></li>
+                <li class="uk-active"><span>管理博客</span></li>
                 <li><a href="/manage/users">管理用户</a></li>
             </ul>
         </div>
