--- a/web/templates/show_blog.html
+++ b/web/templates/show_blog.html
@@ -41,7 +41,7 @@
 <div class="container">
     <div class="con_content">
       <div class="about_box">
-        <h2 class="nh1"><span>您现在的位置是：<a href="/" target="_blank">网站首页</a>>><a href="#" target="_blank">信息浏览</a></span><b>个人简介</b></h2>
+        <h2 class="nh1"><span>您现在的位置是：<a href="/main">网站首页</a>>>博客详情</span><b>{{blog.title}}</b></h2>
         <div class="f_box">
           <p class="a_title">{{blog.title}}</p>
           <p class="p_title"></p>
