--- a/web/templates/write_blog.html
+++ b/web/templates/write_blog.html
@@ -76,7 +76,7 @@ $(function () {
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
                 <li><a href="">管理评论</a></li>
-                <li><a href="/manage/blogs">管理日志</a></li>
+                <li><a href="/manage/blogs">管理博客</a></li>
                 <li><a href="">管理用户</a></li>
             </ul>
         </div>
