--- a/web/templates/edit_blog.html
+++ b/web/templates/edit_blog.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}写博客{% endblock %}
+{% block title %}修改博客{% endblock %}
 
 {% block beforehead %}
 <link rel="stylesheet" href="/static/css/editormd.css"/>
