--- a/web/templates/show_blog.html
+++ b/web/templates/show_blog.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}日志{% endblock %}
+{% block title %}博客详情{% endblock %}
 
 {% block beforehead %}
 <script src="/static/editormd/lib/marked.min.js"></script>
