--- a/web/templates/manage_blog.html
+++ b/web/templates/manage_blog.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}日志{% endblock %}
+{% block title %}管理博客{% endblock %}
 
 {% block beforehead %}
 
 <script>
 function initVM(data) {
     var vm = new Vue({
-        el: '#vm',
+        el: '#vmd',
         data: {
             blogs: data.blogs,
             page: data.page
@@ -64,7 +64,7 @@ $(function() {
         <span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin"></i> 正在加载...</span>
     </div>
 
-    <div id="vm" class="uk-width-1-1">
+    <div id="vmd" class="uk-width-1-1">
         <a href="/manage/blog/writeBlog" class="uk-button uk-button-primary"><i class="uk-icon-plus"></i> 新日志</a>
 
         <table class="uk-table uk-table-hover">
